# SE-489-MLOps-Project

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  environment.yml  fastapi_app.dockerfile  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  cml-eval.yml  deploy.yml  deploy_to_hf.yml  train-vertexai.yml
config/: config.yaml
dockerfiles/: fastapi_app.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
fake_news_detection/: __init__.py  baseline_model.py  predict_model.py  profile_train.py  train_model.py
fake_news_detection/api/: main.py  model_loader.py  schemas.py
fake_news_detection/data/: make_dataset.py
fake_news_detection/models/: model.py
fake_news_detection/visualizations/: visualize.py
gradio_ui/: gradio_app.py
notebooks/: exploratory_data_analysis.ipynb
reports/figures/: train_profile.prof
tests/: test_make_dataset.py  test_predict_model.py  test_train_model.py
